[package]
name = "kvs"
version = "0.1.0"
authors = ["ShaneM123 <shanemoloneybusiness@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.6"


[lib]
name = "kvs"
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false
