[package]
name = "kvs"
version = "0.1.0"
authors = ["ShaneM123 <shanemoloneybusiness@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
structopt = "0.3.21"
thiserror = "1.0"
anyhow = "1.0"
[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.6"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
name = "kvs"
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false
